--- a/src/templates/empresas/mi_empresa.html
+++ b/src/templates/empresas/mi_empresa.html
@@ -44,7 +44,7 @@
 </style>
 <div class="page-header">
     <h2>Mi Empresa / Startup</h2>
-    <p>Creá tu solicitud y seguí su estado</p>
+    <p>Gestioná tu postulación y seguí su estado</p>
 </div>
 
 {% if messages %}
